dataset datatypes added, closes #51
